--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <h1>Initial Version</h1>
     <p>This is the initial version of the HTML file.</p>
     <hr/>
+    <h1> I am a GUMMY Bear </h1>
 </body>
 </html>
