--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
     <p>This is the initial version of the HTML file.</p>
     <hr/>
     <h1> I am a GUMMY Bear </h1>
+    <p>Temporary Changes</p>
+    <br>
+    <h2>New changes in life</h2>
 </body>
 </html>
