index.css added

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Git and GitHub Hands-on</title>
+    <link ref="stylesheet" href="./index.css" />
 </head>
 <body>
     <h1>Initial Version</h1>
